program/MiniLangParser.py
# Generated from MiniLang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniLangParser ( Parser ):

    grammarFileName = "MiniLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'('", "')'", "'if'", "'{'", "'}'", 
                     "'else'", "'while'", "'function'", "','", "'*'", "'/'", 
                     "'+'", "'-'", "'=='", "'!='", "'>'", "'<'", "'>='", 
                     "'<='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "MUL", "DIV", 
                      "ADD", "SUB", "EQUAL", "NOTEQUAL", "BTHAN", "LTHAN", 
                      "BEQ", "LEQ", "ID", "INT", "STRING", "NEWLINE", "WS", 
                      "COMMENT" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_expr = 2
    RULE_ifstat = 3
    RULE_whilestat = 4
    RULE_funcdec = 5
    RULE_funccall = 6
    RULE_params = 7
    RULE_args = 8

    ruleNames =  [ "prog", "stat", "expr", "ifstat", "whilestat", "funcdec", 
                   "funccall", "params", "args" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    MUL=11
    DIV=12
    ADD=13
    SUB=14
    EQUAL=15
    NOTEQUAL=16
    BTHAN=17
    LTHAN=18
    BEQ=19
    LEQ=20
    ID=21
    INT=22
    STRING=23
    NEWLINE=24
    WS=25
    COMMENT=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLangParser.StatContext)
            else:
                return self.getTypedRuleContext(MiniLangParser.StatContext,i)


        def getRuleIndex(self):
            return MiniLangParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = MiniLangParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 18
                self.stat()
                self.state = 21 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 98566932) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniLangParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BlankContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLangParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEWLINE(self):
            return self.getToken(MiniLangParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlank" ):
                listener.enterBlank(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlank" ):
                listener.exitBlank(self)


    class Declaracion_de_funcionContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLangParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcdec(self):
            return self.getTypedRuleContext(MiniLangParser.FuncdecContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion_de_funcion" ):
                listener.enterDeclaracion_de_funcion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion_de_funcion" ):
                listener.exitDeclaracion_de_funcion(self)


    class ComentarioContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLangParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def COMMENT(self):
            return self.getToken(MiniLangParser.COMMENT, 0)
        def NEWLINE(self):
            return self.getToken(MiniLangParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComentario" ):
                listener.enterComentario(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComentario" ):
                listener.exitComentario(self)


    class Llamada_a_funcionContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLangParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funccall(self):
            return self.getTypedRuleContext(MiniLangParser.FunccallContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLlamada_a_funcion" ):
                listener.enterLlamada_a_funcion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLlamada_a_funcion" ):
                listener.exitLlamada_a_funcion(self)


    class Estructura_whileContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLangParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def whilestat(self):
            return self.getTypedRuleContext(MiniLangParser.WhilestatContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstructura_while" ):
                listener.enterEstructura_while(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstructura_while" ):
                listener.exitEstructura_while(self)


    class PrintExprContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLangParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(MiniLangParser.ExprContext,0)

        def NEWLINE(self):
            return self.getToken(MiniLangParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintExpr" ):
                listener.enterPrintExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintExpr" ):
                listener.exitPrintExpr(self)


    class AssignContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLangParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MiniLangParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(MiniLangParser.ExprContext,0)

        def NEWLINE(self):
            return self.getToken(MiniLangParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)


    class Estructura_ifContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLangParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifstat(self):
            return self.getTypedRuleContext(MiniLangParser.IfstatContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstructura_if" ):
                listener.enterEstructura_if(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstructura_if" ):
                listener.exitEstructura_if(self)



    def stat(self):

        localctx = MiniLangParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 40
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = MiniLangParser.PrintExprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 23
                self.expr()
                self.state = 24
                self.match(MiniLangParser.NEWLINE)
                pass

            elif la_ == 2:
                localctx = MiniLangParser.AssignContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 26
                self.match(MiniLangParser.ID)
                self.state = 27
                self.match(MiniLangParser.T__0)
                self.state = 28
                self.expr()
                self.state = 29
                self.match(MiniLangParser.NEWLINE)
                pass

            elif la_ == 3:
                localctx = MiniLangParser.BlankContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 31
                self.match(MiniLangParser.NEWLINE)
                pass

            elif la_ == 4:
                localctx = MiniLangParser.ComentarioContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 32
                self.match(MiniLangParser.COMMENT)
                self.state = 34
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 33
                    self.match(MiniLangParser.NEWLINE)


                pass

            elif la_ == 5:
                localctx = MiniLangParser.Estructura_ifContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 36
                self.ifstat()
                pass

            elif la_ == 6:
                localctx = MiniLangParser.Estructura_whileContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 37
                self.whilestat()
                pass

            elif la_ == 7:
                localctx = MiniLangParser.Declaracion_de_funcionContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 38
                self.funcdec()
                pass

            elif la_ == 8:
                localctx = MiniLangParser.Llamada_a_funcionContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 39
                self.funccall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniLangParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ParensContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(MiniLangParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParens" ):
                listener.enterParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParens" ):
                listener.exitParens(self)


    class StringContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(MiniLangParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)


    class MulDiv_STRINGsContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLangParser.STRING)
            else:
                return self.getToken(MiniLangParser.STRING, i)
        def MUL(self):
            return self.getToken(MiniLangParser.MUL, 0)
        def DIV(self):
            return self.getToken(MiniLangParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDiv_STRINGs" ):
                listener.enterMulDiv_STRINGs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDiv_STRINGs" ):
                listener.exitMulDiv_STRINGs(self)


    class MulDiv_INTsContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLangParser.INT)
            else:
                return self.getToken(MiniLangParser.INT, i)
        def MUL(self):
            return self.getToken(MiniLangParser.MUL, 0)
        def DIV(self):
            return self.getToken(MiniLangParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDiv_INTs" ):
                listener.enterMulDiv_INTs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDiv_INTs" ):
                listener.exitMulDiv_INTs(self)


    class AddSub_INTsContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLangParser.INT)
            else:
                return self.getToken(MiniLangParser.INT, i)
        def ADD(self):
            return self.getToken(MiniLangParser.ADD, 0)
        def SUB(self):
            return self.getToken(MiniLangParser.SUB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSub_INTs" ):
                listener.enterAddSub_INTs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSub_INTs" ):
                listener.exitAddSub_INTs(self)


    class IdContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MiniLangParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId" ):
                listener.enterId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId" ):
                listener.exitId(self)


    class AddSub_STRINGsContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLangParser.STRING)
            else:
                return self.getToken(MiniLangParser.STRING, i)
        def ADD(self):
            return self.getToken(MiniLangParser.ADD, 0)
        def SUB(self):
            return self.getToken(MiniLangParser.SUB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSub_STRINGs" ):
                listener.enterAddSub_STRINGs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSub_STRINGs" ):
                listener.exitAddSub_STRINGs(self)


    class Comparacion_INTsContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLangParser.INT)
            else:
                return self.getToken(MiniLangParser.INT, i)
        def EQUAL(self):
            return self.getToken(MiniLangParser.EQUAL, 0)
        def NOTEQUAL(self):
            return self.getToken(MiniLangParser.NOTEQUAL, 0)
        def LTHAN(self):
            return self.getToken(MiniLangParser.LTHAN, 0)
        def BTHAN(self):
            return self.getToken(MiniLangParser.BTHAN, 0)
        def BEQ(self):
            return self.getToken(MiniLangParser.BEQ, 0)
        def LEQ(self):
            return self.getToken(MiniLangParser.LEQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparacion_INTs" ):
                listener.enterComparacion_INTs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparacion_INTs" ):
                listener.exitComparacion_INTs(self)


    class Comparacion_STRINGsContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLangParser.STRING)
            else:
                return self.getToken(MiniLangParser.STRING, i)
        def EQUAL(self):
            return self.getToken(MiniLangParser.EQUAL, 0)
        def NOTEQUAL(self):
            return self.getToken(MiniLangParser.NOTEQUAL, 0)
        def LTHAN(self):
            return self.getToken(MiniLangParser.LTHAN, 0)
        def BTHAN(self):
            return self.getToken(MiniLangParser.BTHAN, 0)
        def BEQ(self):
            return self.getToken(MiniLangParser.BEQ, 0)
        def LEQ(self):
            return self.getToken(MiniLangParser.LEQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparacion_STRINGs" ):
                listener.enterComparacion_STRINGs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparacion_STRINGs" ):
                listener.exitComparacion_STRINGs(self)


    class IntContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(MiniLangParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt" ):
                listener.enterInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt" ):
                listener.exitInt(self)



    def expr(self):

        localctx = MiniLangParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = MiniLangParser.MulDiv_INTsContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.match(MiniLangParser.INT)
                self.state = 43
                _la = self._input.LA(1)
                if not(_la==11 or _la==12):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 44
                self.match(MiniLangParser.INT)
                pass

            elif la_ == 2:
                localctx = MiniLangParser.AddSub_INTsContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.match(MiniLangParser.INT)
                self.state = 46
                _la = self._input.LA(1)
                if not(_la==13 or _la==14):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 47
                self.match(MiniLangParser.INT)
                pass

            elif la_ == 3:
                localctx = MiniLangParser.Comparacion_INTsContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.match(MiniLangParser.INT)
                self.state = 49
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2064384) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 50
                self.match(MiniLangParser.INT)
                pass

            elif la_ == 4:
                localctx = MiniLangParser.MulDiv_STRINGsContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 51
                self.match(MiniLangParser.STRING)
                self.state = 52
                _la = self._input.LA(1)
                if not(_la==11 or _la==12):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 53
                self.match(MiniLangParser.STRING)
                pass

            elif la_ == 5:
                localctx = MiniLangParser.AddSub_STRINGsContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 54
                self.match(MiniLangParser.STRING)
                self.state = 55
                _la = self._input.LA(1)
                if not(_la==13 or _la==14):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 56
                self.match(MiniLangParser.STRING)
                pass

            elif la_ == 6:
                localctx = MiniLangParser.Comparacion_STRINGsContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 57
                self.match(MiniLangParser.STRING)
                self.state = 58
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2064384) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 59
                self.match(MiniLangParser.STRING)
                pass

            elif la_ == 7:
                localctx = MiniLangParser.IntContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 60
                self.match(MiniLangParser.INT)
                pass

            elif la_ == 8:
                localctx = MiniLangParser.StringContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 61
                self.match(MiniLangParser.STRING)
                pass

            elif la_ == 9:
                localctx = MiniLangParser.IdContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 62
                self.match(MiniLangParser.ID)
                pass

            elif la_ == 10:
                localctx = MiniLangParser.ParensContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 63
                self.match(MiniLangParser.T__1)
                self.state = 64
                self.expr()
                self.state = 65
                self.match(MiniLangParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MiniLangParser.ExprContext,0)


        def prog(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLangParser.ProgContext)
            else:
                return self.getTypedRuleContext(MiniLangParser.ProgContext,i)


        def getRuleIndex(self):
            return MiniLangParser.RULE_ifstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfstat" ):
                listener.enterIfstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfstat" ):
                listener.exitIfstat(self)




    def ifstat(self):

        localctx = MiniLangParser.IfstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ifstat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(MiniLangParser.T__3)
            self.state = 70
            self.match(MiniLangParser.T__1)
            self.state = 71
            self.expr()
            self.state = 72
            self.match(MiniLangParser.T__2)
            self.state = 73
            self.match(MiniLangParser.T__4)
            self.state = 74
            self.prog()
            self.state = 75
            self.match(MiniLangParser.T__5)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 76
                self.match(MiniLangParser.T__6)
                self.state = 77
                self.match(MiniLangParser.T__4)
                self.state = 78
                self.prog()
                self.state = 79
                self.match(MiniLangParser.T__5)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhilestatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MiniLangParser.ExprContext,0)


        def prog(self):
            return self.getTypedRuleContext(MiniLangParser.ProgContext,0)


        def getRuleIndex(self):
            return MiniLangParser.RULE_whilestat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhilestat" ):
                listener.enterWhilestat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhilestat" ):
                listener.exitWhilestat(self)




    def whilestat(self):

        localctx = MiniLangParser.WhilestatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_whilestat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(MiniLangParser.T__7)
            self.state = 84
            self.match(MiniLangParser.T__1)
            self.state = 85
            self.expr()
            self.state = 86
            self.match(MiniLangParser.T__2)
            self.state = 87
            self.match(MiniLangParser.T__4)
            self.state = 88
            self.prog()
            self.state = 89
            self.match(MiniLangParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniLangParser.ID, 0)

        def params(self):
            return self.getTypedRuleContext(MiniLangParser.ParamsContext,0)


        def prog(self):
            return self.getTypedRuleContext(MiniLangParser.ProgContext,0)


        def getRuleIndex(self):
            return MiniLangParser.RULE_funcdec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdec" ):
                listener.enterFuncdec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdec" ):
                listener.exitFuncdec(self)




    def funcdec(self):

        localctx = MiniLangParser.FuncdecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcdec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(MiniLangParser.T__8)
            self.state = 92
            self.match(MiniLangParser.ID)
            self.state = 93
            self.match(MiniLangParser.T__1)
            self.state = 94
            self.params()
            self.state = 95
            self.match(MiniLangParser.T__2)
            self.state = 96
            self.match(MiniLangParser.T__4)
            self.state = 97
            self.prog()
            self.state = 98
            self.match(MiniLangParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunccallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniLangParser.ID, 0)

        def args(self):
            return self.getTypedRuleContext(MiniLangParser.ArgsContext,0)


        def getRuleIndex(self):
            return MiniLangParser.RULE_funccall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunccall" ):
                listener.enterFunccall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunccall" ):
                listener.exitFunccall(self)




    def funccall(self):

        localctx = MiniLangParser.FunccallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funccall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(MiniLangParser.ID)
            self.state = 101
            self.match(MiniLangParser.T__1)
            self.state = 102
            self.args()
            self.state = 103
            self.match(MiniLangParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLangParser.ID)
            else:
                return self.getToken(MiniLangParser.ID, i)

        def getRuleIndex(self):
            return MiniLangParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)




    def params(self):

        localctx = MiniLangParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 105
                self.match(MiniLangParser.ID)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==10:
                    self.state = 106
                    self.match(MiniLangParser.T__9)
                    self.state = 107
                    self.match(MiniLangParser.ID)
                    self.state = 112
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)


